trunk/Archive2/0e/9fd59c2134994a/output
main.cpp:13:28: error: expected ';' at end of declaration list
    MyClass( MyClass&& src) delete;
                           ^
                           ;
main.cpp:11:10: error: explicitly-defaulted copy assignment operator must return 'MyClass &'
    void operator=( const MyClass& other) = default;
         ^
2 errors generated.
